Finish base html

--- a/src/perf_ui/templates/perf_ui/base.html
+++ b/src/perf_ui/templates/perf_ui/base.html
@@ -26,9 +26,10 @@
 <body id="loadtestContent">
     <!-- 导航栏 -->
     {% include "./perf_ui/include/nav.html"%}
+    <p>&nbsp</p><p>&nbsp</p>
     <!-- 内容列表 -->
     <div id="loadtest-main" class="container">
-        {%block main%}<p>&nbsp</p><p>&nbsp</p><p>&nbsp</p><p>&nbsp</p> <p>This in main page </p>{% endblock %}
+        {%block main%}This in main page{% endblock %}
     </div>
 </body>
 
