--- a/src/perf_ui/templates/perf_ui/vod-t6-index.html
+++ b/src/perf_ui/templates/perf_ui/vod-t6-index.html
@@ -18,16 +18,17 @@
 
 <div class="row">
 	 <div class="form-group">
-	    <div class="col-sm-6 col-md-4">
+	 	<div class="col-sm-6 col-md-4">
 	      <select class= "form-control text-right selectpicker" name="load_test_version_list" id="load_test_version_list" onChange="getRecentlyLoadTestResultByVersion(this.value)"> 
-				<option value="1">VOD_T6</option>
+				<option value="1">VEX Core</option>
+				<option value="1">VEX FE</option>
 			</select>
 	    </div>
 	    
 	    <div class="col-sm-6 col-md-4">
 	      <select class= "form-control text-right selectpicker" name="load_test_version_list" id="load_test_version_list" onChange="getRecentlyLoadTestResultByVersion(this.value)"> 
-				<option value="1">VEX Core</option>
-				<option value="1">VEX FE</option>
+				<option value="1">VEX-2.8.0-RC1</option>
+				<option value="1">VEX-2.8.0-RC2</option>
 			</select>
 	    </div>
 	    
