--- a/src/perf_ui/templates/perf_ui/include/nav.html
+++ b/src/perf_ui/templates/perf_ui/include/nav.html
@@ -18,11 +18,11 @@
 				<li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">&nbsp&nbsp<span class="glyphicon glyphicon-stats">Result</span><span class="caret"></span>&nbsp&nbsp</a>
 		          <ul class="dropdown-menu">
-		            <li><a href="{% url 'result_vod_t6_index' %}"><span class="text-muted text-center">&nbsp&nbspT6VOD</span></a></li>
+		            <li><a href="{% url 'perf_result' 'VOD_T6' %}"><span class="text-muted text-center">&nbsp&nbspT6VOD</span></a></li>
 		            <li role="separator" class="divider"></li>
-		            <li><a href="{% url 'result_linear_t6_index' %}"><span class="text-muted text-center">&nbsp&nbspT6Linear</span></a></li>
+		            <li><a href="{% url 'perf_result' 'LINEAR_T6'%}"><span class="text-muted text-center">&nbsp&nbspT6Linear</span></a></li>
 		            <li role="separator" class="divider"></li>
-		            <li><a href="{% url 'result_cdvr_t6_index' %}"><span class="text-muted text-center">&nbsp&nbspT6cDVR</span></a></li>
+		            <li><a href="{% url 'perf_result' 'CDVR_T6'%}"><span class="text-muted text-center">&nbsp&nbspT6cDVR</span></a></li>
 		          </ul>
 		        </li>
 			</ul>
