change perf_ui to perfui

--- a/src/perfui/templates/perfui/base.html
+++ b/src/perfui/templates/perfui/base.html
@@ -25,7 +25,7 @@
 </head>
 <body id="loadtestContent">
     <!-- Nav bar -->
-    {% include "./perf_ui/include/nav.html"%}
+    {% include "./perfui/include/nav.html"%}
     <p>&nbsp</p><p>&nbsp</p>
     <!-- Contents -->
     <div id="loadtest-main" class="container">
