--- a/src/perfui/templates/perfui/perf_result.html
+++ b/src/perfui/templates/perfui/perf_result.html
@@ -1,4 +1,4 @@
-{% extends "./perf_ui/base.html" %}
+{% extends "./perfui/base.html" %}
 
 {% block header %}
 <script>
@@ -56,7 +56,7 @@
 		<p class="text-info lead">No performance test result for {{ test_type }}</p>
 	</div>
 {% else %}
-	<div class="row">
+    <div class="row">
 		<div class="form-group">
 		 	<div class="col-sm-6 col-md-4">
 		      <select class= "form-control text-right selectpicker" name="load_test_version_list" id="load_test_project_list" onChange="getRecentlyLoadTestResultByProject(this.value)"> 
@@ -90,7 +90,7 @@
 		  </div>
 	    <div class="divider"><h5 class="page-header"></h5></div>
 	</div>
-	
+
 	<div class="row">
 	   <div class="col-sm-6 col-md-4">
 	      <div id="indexChart" class="thumbnail" style="width: auto; height: 350px;"></div>
